# lunar-engineering-managed-knowledge-base

./: .gitignore  Dockerfile  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tox.ini
.devcontainer/: devcontainer.json
docs/_build/html/: babygitr.html  genindex.html  index.html  modules.html  objects.inv  search.html  searchindex.js
docs/_build/html/.doctrees/: babygitr.doctree  environment.pickle  index.doctree  modules.doctree
docs/source/: babygitr.rst  conf.py  index.md  index.rst  modules.rst
src/baby_gitr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/babygitr/: __init__.py  _babygitr.py  _error.py  repowatcher.py
tests/: conftest.py
tests/babygitr/: test_repowatcher.py
tests/test_babygitr/: __init__.py  test__error.py  test_babygitr.py  test_repowatcher.py
tests/test_repos/test_project.git/refs/heads/: main
tests/test_server_setup/: .htpasswd  server_boot.sh
tests/test_site_assets/: index.html  style.css
