[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "babygitr"
description = "Babysit a local git repo and sync it with a remote."
authors = [{name = "Lunar Engineering"}]
maintainers = [
  {name = "Timothy Luna", email = "timothy.d.luna@gmail.com"}
]
keywords = ["git", "monitor", "sync"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "GitPython==3.1.27",
]
dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}
readme = {file = "README.md"}

[project.optional-dependencies]
test = [
    "tox==3.25.0",
    "pytest==7.1.2",
    "flake8==4.0.1",
    "flake8-html==0.4.2",
    "coverage==6.4.1",
    "mypy==0.961",
    "bandit==1.7.4",
    "black==22.3.0",
    "lxml==4.9.0",
    "sphinx==5.0.2",
    "autodoc==0.5.0",
    "nbsphinx==0.8.9",
    "myst-parser==0.18.0",
]

[project.scripts]
my-script = "my_package.module:function"