[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "babygitr"
description = "Babysit a local git repo and sync it with a remote."
authors = [{name = "Lunar Engineering"}]
maintainers = [
  {name = "Timothy Luna", email = "timothy.d.luna@gmail.com"}
]
keywords = ["git", "monitor", "sync"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "readme"]

dependencies = ["pygit2==1.9.2", "schema==0.7.5"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}
readme = {file = "README.md"}


[project.optional-dependencies]
test = [
    # Packaging and testing
    "tox==3.25.0",
    "wheel==0.37.1",
    # Pytest
    "pytest==7.1.2",
    "pytest-cov==3.0.0",
    "pytest-html==3.1.1",
    # "coverage==6.4.1",
    # Flake
    "flake8==4.0.1",
    "flake8-html==0.4.2",
    # Mypy
    "mypy==0.961",
    "lxml==4.9.0",
    # Bandit
    "bandit==1.7.4",
    # Black
    "black==22.3.0",
    # Sphinx
    "sphinx==5.0.2",
    "autodoc==0.5.0",
    "nbsphinx==0.8.9",
    "myst-parser==0.18.0",
]

[project.scripts]
my-script = "my_package.module:function"